--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,7 @@
+html {
+  height: 100%;
+}
+
 body,
 html {
   font-size: 1.2em;
@@ -5,7 +9,7 @@ html {
 
 body {
   margin: 0;
-  height: 100%;
+  min-height: 100%;
 
   * {
     font-size: 0.9em;
@@ -18,23 +22,28 @@ body {
   display: flex;
 }
 
+.backgroundImage {
+  background-image: url("./wallpaper.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+  position: fixed;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
 .wrapper {
-  height: 100%;
   padding: 0;
   margin: 0;
   flex-direction: column;
-  // justify-content: center;
-  // align-items: center;
-  .backgroundImage {
-    background-image: url("./wallpaper.jpg");
-    background-repeat: no-repeat;
-    background-position: center;
-    background-size: cover;
-    position: absolute;
-    top: 0;
-    height: 100%;
-    width: 100%;
-  }
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
 
   ::placeholder {
     color: lightgray;
@@ -42,9 +51,7 @@ body {
   }
 
   .rssTooltip {
-    width: 100%;
-    height: 100%;
-    position: relative;
+    position: absolute;
 
     .article__desc {
       padding: 1%;
@@ -79,6 +86,7 @@ header {
   animation-duration: 1s;
   animation-iteration-count: 1;
 }
+
 @keyframes turnRound {
   0% {
     transform: translate(0px, 0px) rotate(0deg);
@@ -92,7 +100,7 @@ header {
 .settings__container {
   display: none;
   width: 100%;
-  height: 95%;
+  height: 100%;
   justify-content: center;
   align-items: center;
   position: absolute;
@@ -282,7 +290,6 @@ header {
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  position: absolute;
 }
 
 .upperContainer {
@@ -290,8 +297,8 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: 100%;
   width: 100%;
+  height: 100%;
 
   .msgContainer {
     width: auto;
@@ -313,7 +320,9 @@ header {
   padding: 0.5% 1%;
   border-radius: 30px;
   opacity: 0.7;
-
+  position: sticky;
+  top: 8%;
+  // margin: 4vh 0;
   .form {
     display: inline-flex;
     width: 100%;
@@ -363,6 +372,8 @@ header {
   border-radius: 0 0 15px 15px;
   overflow-y: auto;
   margin-bottom: 2%;
+  position: sticky;
+  top: 14.5%;
 
   * {
     color: black;
@@ -395,14 +406,16 @@ header {
 }
 
 .audio {
-  width: 50%;
-  background-color: rgba(0, 0, 0, 0.5);
+  width: 70%;
+  background-color: rgba(0, 0, 0, 0.8);
   padding: 0.5%;
   border-radius: 15px;
-  margin: 1% 0;
+  margin-bottom: 1vh;
   display: none;
-  flex-direction: column;
-  height: auto;
+  position: sticky;
+  top: 85%;
+  flex-direction: row;
+  align-items: center;
 
   .player {
     height: min-content;
@@ -424,28 +437,23 @@ header {
 
   &Msg {
     height: min-content;
-    width: 100%;
-    font-size: 1.6em;
-    margin-bottom: 0.3em;
+    width: 70%;
+    font-size: 1.4em;
 
     .playlistInfo {
-      font-size: 0.8em;
-      width: 10%;
-    }
-
-    #YtId,
-    #streamTitle {
-      display: inline;
-    }
-
-    #streamTitle {
-      font-style: italic;
+      width: min-content;
+      margin: 0 1.5vh;
     }
   }
 
   &__remove {
-    height: min-content;
+    height: 2.5vh;
     cursor: pointer;
+  }
+
+  .streamInfoContainer {
+    width: max-content;
+    margin: 0 1vh;
   }
 }
 
@@ -453,11 +461,12 @@ header {
   flex-direction: row;
   justify-content: space-around;
   align-items: flex-start;
-  height: 70%;
   width: 100%;
   font-size: 1.1em;
   flex-wrap: wrap;
   overflow: auto;
+  margin-top: 8vh;
+  position: relative;
 
   .content__container {
     width: 30%;
@@ -761,12 +770,10 @@ header {
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  height: auto;
   background: none;
-  position: fixed;
-  bottom: 0;
-  left: 0;
   padding-bottom: 1em;
+  position: fixed;
+  bottom: 3%;
 
   .icon {
     font-size: 1.3em;
