--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,7 +1,3 @@
-html {
-  height: 100%;
-}
-
 body,
 html {
   font-size: 1.2em;
@@ -9,7 +5,6 @@ html {
 
 body {
   margin: 0;
-  min-height: 100%;
 }
 body * {
   font-size: 0.9em;
@@ -279,7 +274,17 @@ header {
   background-color: rgba(0, 0, 0, 0.7);
 }
 
-.formContainer {
+.formContainer__container {
+  display: flex;
+  height: 20%;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  position: sticky;
+  top: 5%;
+  width: 100%;
+}
+.formContainer__container .formContainer {
   display: inline-flex;
   width: 50%;
   align-items: baseline;
@@ -288,46 +293,43 @@ header {
   padding: 0.5% 1%;
   border-radius: 30px;
   opacity: 0.7;
-  position: sticky;
-  top: 8%;
 }
-.formContainer .form {
+.formContainer__container .formContainer .form {
   display: inline-flex;
   width: 100%;
   align-items: center;
   font-size: 1.2em;
   /* Error placeholder style*/
 }
-.formContainer .form .questionBox {
+.formContainer__container .formContainer .form .questionBox {
   width: 100%;
   height: 2em;
   border: none;
   background: none;
   color: black;
 }
-.formContainer .form ::placeholder {
+.formContainer__container .formContainer .form ::placeholder {
   color: black;
   font-size: 1.2em;
   font-style: italic;
 }
-.formContainer .form .placeholder::placeholder {
+.formContainer__container .formContainer .form .placeholder::placeholder {
   color: red;
   font-weight: bold;
   text-align: center;
   font-style: normal;
   font-size: 1.5em;
 }
-.formContainer .form button {
+.formContainer__container .formContainer .form button {
   border: none;
   background: none;
   padding: 0;
   cursor: pointer;
 }
-.formContainer .form__Submit {
+.formContainer__container .formContainer .form__Submit {
   margin-left: 1%;
 }
-
-.suggestions {
+.formContainer__container .suggestions {
   font-size: 1.3em;
   background-color: white;
   width: 30%;
@@ -335,29 +337,27 @@ header {
   border-radius: 0 0 15px 15px;
   overflow-y: auto;
   margin-bottom: 2%;
-  position: sticky;
-  top: 14.5%;
 }
-.suggestions * {
+.formContainer__container .suggestions * {
   color: black;
 }
-.suggestions .active {
+.formContainer__container .suggestions .active {
   height: auto;
 }
-.suggestions .suggestion {
+.formContainer__container .suggestions .suggestion {
   padding: 0.5% 0 0.5% 1%;
   align-items: center;
   width: 99%;
   flex-direction: row;
   cursor: pointer;
 }
-.suggestions .suggestion__icon {
+.formContainer__container .suggestions .suggestion__icon {
   padding-right: 2%;
 }
-.suggestions .suggestion__label {
+.formContainer__container .suggestions .suggestion__label {
   width: 10%;
 }
-.suggestions .suggestion__desc {
+.formContainer__container .suggestions .suggestion__desc {
   font-style: italic;
   color: gray;
 }
@@ -413,9 +413,8 @@ header {
   width: 100%;
   font-size: 1.1em;
   flex-wrap: wrap;
-  overflow: auto;
-  margin-top: 8vh;
   position: relative;
+  top: 50%;
 }
 .moreContent .content__container {
   width: 30%;
@@ -666,8 +665,8 @@ header {
   justify-content: center;
   background: none;
   padding-bottom: 1em;
-  position: fixed;
-  bottom: 3%;
+  position: relative;
+  top: 97%;
 }
 .footer .icon {
   font-size: 1.3em;
