--- a/views/home.ejs
+++ b/views/home.ejs
@@ -70,7 +70,7 @@
           <h1>BadassBoard settings</h1>
         </span>
         <span id="toggleRss" class="toggleRss flex">
-          <span id="toggleRss__Comment" class="toggleRss__Comment">Show the RSS feed containers on startup ?</span>
+          <span id="toggleRss__Comment" class="toggleRss__Comment">Show the content containers on startup ?</span>
           <label id="toggleRss__Switch" class="toggleRss__Switch">
             <input id="toggleRss__Input" class="toggleRss__Input" type="checkbox" name="toggleRssInput" value="">
             <span id="toggleRss__Slider" class="toggleRss__Slider"></span>
@@ -108,8 +108,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
   <script src="/socket.io/socket.io.js" type="application/javascript"></script>
-  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
+  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>>
 </body>
 
 </html>
