--- a/src/css/app.css
+++ b/src/css/app.css
@@ -11,33 +11,27 @@ body * {
   font-family: Ubuntu, sans-serif;
   color: white;
 }
-
-.flex {
-  display: flex;
-}
-
-.backgroundImage {
-  background-image: url("./wallpaper.png");
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: cover;
-  background-attachment: fixed;
+body .backgroundImage {
   position: fixed;
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+  background-image: url("./wallpaper.png");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+.flex {
+  display: flex;
 }
 
 .wrapper {
   padding: 0;
   margin: 0;
   flex-direction: column;
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
 }
 .wrapper ::placeholder {
   color: lightgray;
@@ -64,6 +58,7 @@ header {
   width: 100%;
   justify-content: flex-end;
   align-items: center;
+  z-index: 3;
 }
 
 .settingsBtn {
@@ -262,7 +257,6 @@ header {
   align-items: center;
   justify-content: center;
   width: 100%;
-  height: 100%;
 }
 .upperContainer .msgContainer {
   width: auto;
@@ -281,8 +275,9 @@ header {
   justify-content: center;
   align-items: center;
   position: sticky;
-  top: 5%;
+  top: 0;
   width: 100%;
+  z-index: 2;
 }
 .formContainer__container .formContainer {
   display: inline-flex;
@@ -293,6 +288,7 @@ header {
   padding: 0.5% 1%;
   border-radius: 30px;
   opacity: 0.7;
+  margin: 3% 0;
 }
 .formContainer__container .formContainer .form {
   display: inline-flex;
@@ -373,6 +369,7 @@ header {
   top: 85%;
   flex-direction: row;
   align-items: center;
+  z-index: 2;
 }
 .audio .player {
   height: min-content;
@@ -414,7 +411,6 @@ header {
   font-size: 1.1em;
   flex-wrap: wrap;
   position: relative;
-  top: 50%;
 }
 .moreContent .content__container {
   width: 30%;
