Styles improvements from the form container

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -321,7 +321,7 @@ header {
     padding: 0.5% 1%;
     border-radius: 30px;
     opacity: 0.7;
-    margin: 3% 0;
+    margin: 3% 0 0 0;
 
     .form {
       display: inline-flex;
@@ -371,7 +371,7 @@ header {
     opacity: 0.7;
     border-radius: 0 0 15px 15px;
     overflow-y: auto;
-    margin-bottom: 2%;
+    margin-bottom: 3%;
 
     * {
       color: black;
