--- a/src/css/app.css
+++ b/src/css/app.css
@@ -288,7 +288,7 @@ header {
   padding: 0.5% 1%;
   border-radius: 30px;
   opacity: 0.7;
-  margin: 3% 0;
+  margin: 3% 0 0 0;
 }
 .formContainer__container .formContainer .form {
   display: inline-flex;
@@ -332,7 +332,7 @@ header {
   opacity: 0.7;
   border-radius: 0 0 15px 15px;
   overflow-y: auto;
-  margin-bottom: 2%;
+  margin-bottom: 3%;
 }
 .formContainer__container .suggestions * {
   color: black;
