--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -510,7 +510,7 @@ header {
 
       .forecast,
       .rssContainer {
-        // margin-bottom: 2vh;
+        height: 100%;
         max-height: 100%;
       }
 
