--- a/src/css/app.css
+++ b/src/css/app.css
@@ -17,7 +17,7 @@ body .backgroundImage {
   bottom: 0;
   left: 0;
   right: 0;
-  background-image: url("./wallpaper.png");
+  background-image: url("./wallpaper.jpg");
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
