--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -18,7 +18,7 @@ body {
     bottom: 0;
     left: 0;
     right: 0;
-    background-image: url("./wallpaper.png");
+    background-image: url("./wallpaper.jpg");
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
