--- a/src/css/app.css
+++ b/src/css/app.css
@@ -279,6 +279,18 @@ header {
   width: 100%;
   z-index: 2;
 }
+.formContainer__container .filter {
+  background-image: url("./wallpaper.jpg");
+  filter: blur(4px);
+  position: absolute;
+  height: 100%;
+  width: 100%;
+  top: -10px;
+  left: 0;
+  background-repeat: no-repeat;
+  background-position: top;
+  background-size: cover;
+}
 .formContainer__container .formContainer {
   display: inline-flex;
   width: 50%;
