--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -311,6 +311,19 @@ header {
   width: 100%;
   z-index: 2;
 
+  .filter {
+    background-image: url("./wallpaper.jpg");
+    filter: blur(4px);
+    position: absolute;
+    height: 100%;
+    width: 100%;
+    top: -10px;
+    left: 0;
+    background-repeat: no-repeat;
+    background-position: top;
+    background-size: cover;
+  }
+
   .formContainer {
     display: inline-flex;
     width: 50%;
