--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -64,11 +64,15 @@ header {
   justify-content: flex-end;
   align-items: center;
   z-index: 3;
+
+  svg {
+    margin-left: 1.5%;
+    cursor: pointer;
+  }
 }
 
 .settingsBtn {
   margin-right: 0.5%;
-  cursor: pointer;
 }
 
 .blank__addContent__svg:hover,
@@ -288,6 +292,34 @@ header {
   align-items: center;
   justify-content: center;
   width: 100%;
+
+  &__converter {
+    display: none;
+    width: 60%;
+    justify-content: space-around;
+    align-items: baseline;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1;
+    margin-bottom: 2%;
+    border-radius: 15px;
+    padding: 1%;
+    box-shadow: 10px 10px 12px 2px rgba(0, 0, 0, 0.60);
+
+    & * {
+      z-index: 1;
+    }
+
+    &__input,
+    &__result {
+      color: black;
+    }
+
+    &__value1,
+    &__value2 {
+      height: 2em;
+      width: 10%;
+    }
+  }
 
   .msgContainer {
     width: auto;
