Finally fixed the formContainer's blur

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -302,19 +302,24 @@ header svg {
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 2;
+  z-index: 1;
 }
-.formContainer__container .filter {
-  background-image: url("./wallpaper.jpg");
-  filter: blur(4px);
+.formContainer__container::before {
   position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
   height: 100%;
   width: 100%;
-  top: -10px;
-  left: 0;
-  background-repeat: no-repeat;
-  background-position: top;
+  content: "";
+  background-image: url("./wallpaper.jpg");
+  background-position: center;
+  background-attachment: fixed;
   background-size: cover;
+  background-repeat: no-repeat;
+  filter: blur(5px);
+  z-index: -1;
 }
 .formContainer__container .formContainer {
   display: inline-flex;
