Units converter integration #2

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -42,9 +42,24 @@
           <div class="suggestions"></div>
         </div>
         <section id="converter" class="upperContainer__converter converter flex">
-          <select class="upperContainer__converter__value1 flex"></select>
+          <img class="upperContainer__converter__remove flex" alt="Hide the converter" src="./src/css/icons/interface/cross.svg">
+          <select class="upperContainer__converter__value1 flex">
+            <option value="Choose a value">Choose a value</option>
+            <option value="Byte">Byte</option>
+            <option value="Kilobyte">Kilobyte</option>
+            <option value="Megabyte">Megabyte</option>
+            <option value="Gigabyte">Gigabyte</option>
+            <option value="Terabyte">Terabyte</option>
+          </select>
           <input class="upperContainer__converter__input" placeholder="Enter a value here">
-          <select class="upperContainer__converter__value2 flex"></select>
+          <select class="upperContainer__converter__value2 flex">
+            <option value="Choose a value">Choose a value</option>
+            <option value="Byte">Byte</option>
+            <option value="Kilobyte">Kilobyte</option>
+            <option value="Megabyte">Megabyte</option>
+            <option value="Gigabyte">Gigabyte</option>
+            <option value="Terabyte">Terabyte</option>
+          </select>
           <input class="upperContainer__converter__result">
         </section>
         <div id="msgContainer" class="msgContainer">
