--- a/src/css/app.css
+++ b/src/css/app.css
@@ -265,7 +265,7 @@ header svg {
   display: none;
   width: 60%;
   justify-content: space-around;
-  align-items: baseline;
+  align-items: center;
   background-color: rgba(0, 0, 0, 0.5);
   z-index: 1;
   margin-bottom: 2%;
@@ -275,13 +275,31 @@ header svg {
 }
 .upperContainer__converter * {
   z-index: 1;
-}
-.upperContainer__converter__input, .upperContainer__converter__result {
-  color: black;
+  font-size: 1em;
 }
 .upperContainer__converter__value1, .upperContainer__converter__value2 {
   height: 2em;
-  width: 10%;
+  width: 13%;
+  color: black;
+}
+.upperContainer__converter__remove {
+  position: relative;
+  top: -100%;
+  left: 95%;
+  background-color: rgba(0, 0, 0, 0.5);
+  border-radius: 15px;
+  padding: 3px;
+  cursor: pointer;
+}
+.upperContainer__converter input {
+  width: 15%;
+  height: 2em;
+  background-color: transparent;
+  border-bottom: 2px solid lightblue;
+  border-left: none;
+  border-right: none;
+  border-top: none;
+  color: white;
 }
 .upperContainer .msgContainer {
   width: auto;
