--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -1,3 +1,5 @@
+$contentBackground: rgba(0, 0, 0, 0.5);
+
 body,
 html {
   font-size: 1.2em;
@@ -297,7 +299,7 @@ header {
     display: none;
     width: 60%;
     justify-content: space-around;
-    align-items: baseline;
+    align-items: center;
     background-color: rgba(0, 0, 0, 0.5);
     z-index: 1;
     margin-bottom: 2%;
@@ -307,17 +309,35 @@ header {
 
     & * {
       z-index: 1;
-    }
-
-    &__input,
-    &__result {
-      color: black;
+      font-size: 1em;
     }
 
     &__value1,
     &__value2 {
       height: 2em;
-      width: 10%;
+      width: 13%;
+      color: black;
+    }
+
+    &__remove {
+      position: relative;
+      top: -100%;
+      left: 95%;
+      background-color: rgba(0, 0, 0, 0.5);
+      border-radius: 15px;
+      padding: 3px;
+      cursor: pointer;
+    }
+
+    & input {
+      width: 15%;
+      height: 2em;
+      background-color: transparent;
+      border-bottom: 2px solid lightblue;
+      border-left: none;
+      border-right: none;
+      border-top: none;
+      color: white;
     }
   }
 
