--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -359,7 +359,7 @@ header {
     width: auto;
     height: auto;
     padding: 0.75%;
-    margin-top: 1%;
+    margin: 1.5% 0;
     border: 1px solid white;
     border-radius: 15px;
     background-color: $contentBackground;
