Updated favicon, 404 error page bug fixes

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Home</title>
-  <link rel="icon" type="image/png" href="src/favicon.ico">
+  <link rel="icon" type="image/png" href="src/favicon.png">
   <link rel="stylesheet" href="src/css/app.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
@@ -135,7 +135,7 @@
   </div>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
   <script src="/socket.io/socket.io.js" type="application/javascript"></script>
-  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>>
+  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>
 </body>
 
 </html>
