--- a/src/css/404.css
+++ b/src/css/404.css
@@ -11,7 +11,7 @@ body * {
   color: white;
 }
 
-#backgroundImage {
+.backgroundImage {
   height: 100%;
   width: 100%;
   background-image: url('./wallpaper.jpg');
@@ -21,7 +21,7 @@ body * {
   filter: blur(4px);
 }
 
-#backgroundColor {
+.backgroundColor {
   width: 100%;
   height: 100%;
   position: absolute;
