--- a/views/404.ejs
+++ b/views/404.ejs
@@ -5,31 +5,31 @@
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>Page not found</title>
-  <link rel="icon" type="image/png" href="./src/favicon.ico">
+  <link rel="icon" type="image/png" href="./src/favicon.png">
   <link rel="stylesheet" href="./src/css/404.css">
   <link href="https://fonts.googleapis.com/css?family=Ubuntu&display=swap" rel="stylesheet">
 </head>
 
 <body>
-  <div class="flexContainer" id="wrapper">
-    <div id="backgroundImage"></div>
-    <div id="backgroundColor"></div>
-    <main id="mainContainer">
+  <div class="flexContainer wrapper" id="wrapper">
+    <div class="backgroundImage"></div>
+    <div class="backgroundColor"></div>
+    <main id="mainContainer" class="mainContainer">
       <span id="statusMsg">
         Mmh... It seems this page doesn't exist. Guru <span id="text">masturbation</span> meditation.
         <p>Maybe you want to go <a href="/">back home</a> ?</p>
       </span>
-    </div>
-    <footer id="footer" class="footer">
-      <span id="icon" class="icon">̿̿ ̿̿ ̿̿ ̿'̿'\̵͇̿̿\з= ( ▀ ͜͞ʖ▀) =ε/̵͇̿̿/’̿’̿ ̿ ̿̿ ̿̿ ̿̿</span>
-      <span id="credits" class="credits">
-        <p>BadassBoard, proudly handmade in Belgium 🍺</p>
-      </span>
-    </footer>
+  </div>
+  <footer id="footer" class="footer">
+    <span id="icon" class="icon">̿̿ ̿̿ ̿̿ ̿'̿'\̵͇̿̿\з= ( ▀ ͜͞ʖ▀) =ε/̵͇̿̿/’̿’̿ ̿ ̿̿ ̿̿ ̿̿</span>
+    <span id="credits" class="credits">
+      <p>BadassBoard, proudly handmade in Belgium 🍺</p>
+    </span>
+  </footer>
   </main>
-  <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8"></script>
-  <script src="/src/js/app.js" charset="utf-8"></script>
-  <script src="/socket.io/socket.io.js"></script>
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js" charset="utf-8" type="application/javascript"></script>
+  <script src="/socket.io/socket.io.js" type="application/javascript"></script>
+  <script src="/src/js/app_minified.js" charset="utf-8" type="application/javascript"></script>
 </body>
 
 </html>
