Updated fonts, audio player styles enhancements, added marinetraffic webcut

--- a/src/css/app.css
+++ b/src/css/app.css
@@ -1,3 +1,15 @@
+@font-face {
+  font-family: distant_galaxyregular;
+  src: url("./fonts/DISTGRG_-webfont.woff");
+  font-weight: normal;
+  font-style: normal;
+}
+@font-face {
+  font-family: "Ubuntu Regular";
+  src: url("./fonts/ubuntu/Ubuntu-R.ttf");
+  font-weight: normal;
+  font-style: normal;
+}
 body,
 html {
   font-size: 1.2em;
@@ -8,8 +20,9 @@ body {
 }
 body * {
   font-size: 0.9em;
-  font-family: Ubuntu, sans-serif;
+  font-family: "Ubuntu Regular", sans-serif;
   color: white;
+  letter-spacing: 0.5px;
 }
 body .backgroundImage {
   position: fixed;
@@ -106,11 +119,14 @@ header svg {
 }
 .settings__container .settings__child__header {
   flex-direction: row;
-  width: auto;
+  width: 100%;
   margin: 1% 0 0 1%;
 }
 .settings__container .settings__child__header h1 {
-  font-size: 1.2em;
+  font-size: 1.5em;
+  width: 100%;
+  text-align: center;
+  font-family: distant_galaxyregular;
 }
 .settings__container .settings__child .settings__BtnContainer {
   position: absolute;
@@ -317,7 +333,7 @@ header svg {
   width: auto;
   height: auto;
   padding: 0.75%;
-  margin-top: 1%;
+  margin: 1.5% 0;
   border: 1px solid white;
   border-radius: 15px;
   background-color: rgba(0, 0, 0, 0.5);
@@ -437,7 +453,7 @@ header svg {
   border-radius: 15px;
   margin-bottom: 1vh;
   display: none;
-  position: sticky;
+  position: fixed;
   top: 85%;
   flex-direction: row;
   align-items: center;
@@ -473,6 +489,11 @@ header svg {
 .audio .streamInfoContainer {
   width: max-content;
   margin: 0 1vh;
+  display: flex;
+  flex-direction: column;
+}
+.audio .streamInfoContainer #YtId {
+  padding-top: 1%;
 }
 
 .moreContent {
